# gemini_app

./: .gitignore  README.md  check_gpt_models.py  init_telethon.py  main.py  requirements.txt
_apps/circle_videos/: make_circle_video.py
_apps/crypto_bot/: bot_init.py  bot_view.py  help_command.py  inviter_bot.py  send_admin_notifications.py  set_commands_bot.py  variables.py
_apps/crypto_bot/db/: db_methods.py
_apps/crypto_bot/is_working/: is_working.py
_apps/crypto_bot/logs/: logs.txt
_apps/crypto_bot/settings/: .settings
_apps/crypto_bot/test/: is_working.py
_apps/excel_report/: excel_compose.py
_apps/gemini_app/api/: api_gemini.py
_apps/gemini_app/geminitrial/: botsettings.py  geminibot.py  models.py  trialbot.py  views.py
_apps/gemini_app/poetry/: pyproject.toml
_apps/gpt_app/bot/: ask_gpt_bot.py
_apps/gpt_app/gpt/: ask_gpt.py
_apps/gpt_app/gpt_connect/: gpt_connect.py
_apps/real_estate_bot/: variables.py  view.py
_apps/simpleatom/: form.sqlite3
_apps/simpleatom/form/migrations/: 0001_initial.py
_apps/simpleatom/simpleatom/: settings.py
api/: api_gemini.py
geminitrial/: botsettings.py  geminibot.py  models.py  trialbot.py  views.py
poetry/: pyproject.toml
