[tool.poetry]
name = "geminitrial"
version = "0.1.0"
description = ""
authors = ["Mixail132 <millionbaxov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
google-generativeai = "^0.3.2"
telebot = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
